@@ -1,3 +1,8 @@
+2007-12-21  Marcus Brinkmann  <marcus@g10code.de>
+
+	* POTFILES.in: src/Add inst-kleopatra.nsi.
+	* de.po: Regenerate and add missing translations.
+
 2007-10-17  Werner Koch  <wk@g10code.com>
 
 	* de.po: Change an "GPGol" to "GpgOL".
